@@ -233,6 +233,7 @@
         <artifactId>build-helper-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>add-source</id>
             <phase>generate-sources</phase>
             <goals>
               <goal>add-source</goal>
@@ -240,6 +241,18 @@
             <configuration>
               <sources>
                 <source>src/main/${hadoop.identifier}/java</source>
+              </sources>
+            </configuration>
+          </execution>
+          <execution>
+            <id>add-test-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-test-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>src/test/${hadoop.identifier}/java</source>
               </sources>
             </configuration>
           </execution>
